<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:src="@drawable/lelouch"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:padding="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:text="@string/my_name"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/profile_alias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_name"
        android:layout_marginBottom="4dp"
        android:text="@string/personal_email"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textColor="@android:color/holo_blue_dark"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_alias"
        android:text="@string/some_text"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        />


</android.widget.RelativeLayout>